--- a/index.html
+++ b/index.html
@@ -46,6 +46,66 @@
                 ],
                 "correctAnswer": "A.提出并阐述农村包围城市,武装夺取政权思想"
             },
+            {
+                "question": "( )首次对毛泽东和毛泽东思想的历史地位做出了科学的.实事求是的评价.",
+                "answers": [
+                    "A.《在纪念毛泽东同志诞辰120周年座谈会上的讲话》",
+                    "B.《中国共产党中央委员会关于建国以来党的若干历史问题的讲话》",
+                    "C.《中共中央关于党的百年奋斗重大成就和历史经验的决议》",
+                    "D.《关于若干历史问题的决议》"
+                ],
+                "correctAnswer": "B.《中国共产党中央委员会关于建国以来党的若干历史问题的讲话》"
+            },
+            {
+                "question": "( )事实上确立了毛泽东在党中央和红军的领导地位.",
+                "answers": [
+                    "A.八七会议",
+                    "B.中共七大",
+                    "C.古田会议",
+                    "D.遵义会议"
+                ],
+                "correctAnswer": "D.遵义会议"
+            },
+            {
+                "question": "下列不属于毛泽东思想活的灵魂的是( )",
+                "answers": [
+                    "A.实事求是",
+                    "B.群众路线",
+                    "C.党的建设",
+                    "D.独立自主"
+                ],
+                "correctAnswer": "C.党的建设"
+            },
+            {
+                "question": "中国共产党的生命线和根本工作路线是( )",
+                "answers": [
+                    "A.实事求是",
+                    "B.群众路线",
+                    "C.独立自主",
+                    "D.党的建设"
+                ],
+                "correctAnswer": "B.群众路线"
+            },
+            {
+                "question": "在中国共产党历史上,( )第一个明确提出\"马克思主义中国化\"的科学命题和重大任务.",
+                "answers": [
+                    "A.刘少奇",
+                    "B.周恩来",
+                    "C.陈独秀",
+                    "D.毛泽东"
+                ],
+                "correctAnswer": "D.毛泽东"
+            },
+            {
+                "question": "把毛泽东思想写入党章,确立为中国共产党必须长期坚持的指导思想的会议是( ).",
+                "answers": [
+                    "A.党的六届七中全会",
+                    "B.党的七届六中全会",
+                    "C.党的六大",
+                    "D.党的七大"
+                ],
+                "correctAnswer": "D.党的七大"
+            }
             //其他题目
         ];
 ​
