--- a/index.html
+++ b/index.html
@@ -6,6 +6,41 @@
     <meta charset="utf-8" />
     <title>接受洗礼吧！</title>
     <link rel="stylesheet" type="text/css" href="quiz.css">
+     <style>
+        .result {
+            width: 1000px;
+            height: 50px;
+        }
+
+        .quiz {
+            font-size: large;
+            padding: auto;
+        }
+
+        .quiz li {
+            padding: 10px;
+        }
+
+        .QuizTable {
+            border-radius: 20px;
+            width: 800px;
+            height: 350px;
+            position: absolute;
+            left: 40%;
+            top: 30%;
+            transform: translate(-50%, -50%);
+            border: 3px solid;
+            padding: 10px;
+            border-style: outset;
+
+
+        }
+
+        button {
+            font-size: 30px;
+            margin: 20px;
+        }
+    </style>
 </head>
 ​
 <body>
