--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 ​
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.3, maximum-scale=3.0, user-scalable=yes">
     <title>接受洗礼吧！</title>
     <link rel="stylesheet" type="text/css" href="quiz.css">
      <style>
