--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@ layout: false
                 "correctAnswer": "B.《心理类型学》P406 外倾类型:他尽力去做或创造他的环境急需和期望他去完成的事情,他自动放弃每一种并不是完全明显的,或者在任何方面都超过了他周围的那些人所期望的革新。"
             },
             {
-                "question": "小李是个工作狂，认为身体不过是为工作运转的机器罢了，漫无目的的发呆、
-                    娱乐、性生活什么的都没有卵用，以至于健康出现了问题。这件事体现了（）的作用",
+                "question": "小李是个工作狂，认为身体不过是为工作运转的机器罢了，漫无目的的发呆、娱乐、性生活什么的都没有卵用，以至于健康出现了问题。这件事体现了（）的作用",
                 "answers": [
                     "A.外倾功能",
                     "B.内倾功能",
@@ -133,7 +132,7 @@ layout: false
                     "D.不反映功能"
                 ],
                 "correctAnswer": "A.《心理类型学》P406 外倾类型:因为他的类型具有一种如此强烈的外部倾向,以致于最为明显的主观事实,即他自己身体上的状况也会非常容易地接受并不恰当的思考。身体并不完全是客观的或“外在的”,结果对生理健康来说是必不可少的简单的基本需求的满足也不复存在了。于是,身体总是遭受磨难,更不消说灵魂了。"
-            },
+            }
 
             
         ];
