--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ layout: false
                     "D.都不可能"
                 ],
                 "correctAnswer": "C.都有可能",
-                "anlysis":"《心理类型学》P401: 例如在同一个家庭里，一个孩子是内倾的，另一个孩子却可能是外倾的。"
+                "analysis":"《心理类型学》P401: 例如在同一个家庭里，一个孩子是内倾的，另一个孩子却可能是外倾的。"
             },
             {
                 "question": "小明因为想要变得冷酷，因此在寒冷的冬天决定不穿大衣，这件事体现了（）的作用",
@@ -93,7 +93,7 @@ layout: false
                     "D.不反映功能"
                 ],
                 "correctAnswer": "B.内倾功能",
-                "anlysis":"《心理类型学》P403: 。例如,因为室外天气寒冷,某人被说服穿上他的大衣,但另一个人出于一种变得冷酷的欲望而发现这是大可不必的事情。前者定向于客观事件，后者则可说是介于他自己和客观事实之间的观点。"
+                "analysis":"《心理类型学》P403: 。例如,因为室外天气寒冷,某人被说服穿上他的大衣,但另一个人出于一种变得冷酷的欲望而发现这是大可不必的事情。前者定向于客观事件，后者则可说是介于他自己和客观事实之间的观点。"
             },
             {
                 "question": "钱德勒的演员去世后，大家纷纷在朋友圈发RIP，但是小王却不想加入其中，不是因为他不喜欢这个演员，而是他觉得公众所普遍缅怀的对象实际上并不值得缅怀。这件事体现了（）的作用",
@@ -104,7 +104,7 @@ layout: false
                     "D.不反映功能"
                 ],
                 "correctAnswer":"B.内倾功能",
-                "anlysis":"《心理类型学》P403: 某人崇拜一个新近成名的男高音歌·手是因为整个世界都崇拜他，而另一个人的不置可否则并不是因为他不喜欢他,而是因为他觉得公众所普遍崇拜的对象实际上并不值得崇拜。前者定向于客观事件，后者则可说是介于他自己和客观事实之间的观点。"
+                "analysis":"《心理类型学》P403: 某人崇拜一个新近成名的男高音歌·手是因为整个世界都崇拜他，而另一个人的不置可否则并不是因为他不喜欢他,而是因为他觉得公众所普遍崇拜的对象实际上并不值得崇拜。前者定向于客观事件，后者则可说是介于他自己和客观事实之间的观点。"
             },
             {
                 "question": "从来如此，便是对的。这件事体现了（）的作用",
@@ -115,7 +115,7 @@ layout: false
                     "D.不反映功能"
                 ],
                 "correctAnswer":"A.外倾功能",
-                "anlysis":"《心理类型学》P403: 某人之所以屈从于一种特定的事态是因为他的经历告诉他,一切都是历来如此,但是,另一个人却深信,尽管事情以同样的方式重复1000次,但第1001次却会极不相同。前者定前者定向于客观事件，后者则可说是介于他自己和客观事实之间的观点。"
+                "analysis":"《心理类型学》P403: 某人之所以屈从于一种特定的事态是因为他的经历告诉他,一切都是历来如此,但是,另一个人却深信,尽管事情以同样的方式重复1000次,但第1001次却会极不相同。前者定前者定向于客观事件，后者则可说是介于他自己和客观事实之间的观点。"
             },
             {
                 "question": "老耿是山东人，周围所有人都瞧不起他没正经工作，总是催他考个公务员，但是他没太当回事，对他来说那些没有用的发明才是最重要的。这件事体现了（）的作用",
@@ -126,7 +126,7 @@ layout: false
                     "D.不反映功能"
                 ],
                 "correctAnswer":"B.内倾功能",
-                "anlysis":"《心理类型学》P406 外倾类型:他尽力去做或创造他的环境急需和期望他去完成的事情,他自动放弃每一种并不是完全明显的,或者在任何方面都超过了他周围的那些人所期望的革新。"
+                "analysis":"《心理类型学》P406 外倾类型:他尽力去做或创造他的环境急需和期望他去完成的事情,他自动放弃每一种并不是完全明显的,或者在任何方面都超过了他周围的那些人所期望的革新。"
             },
             {
                 "question": "小李是个工作狂，认为身体不过是为工作运转的机器罢了，漫无目的的发呆、娱乐、性生活什么的都没有卵用，以至于健康出现了问题。这件事体现了（）的作用",
@@ -137,7 +137,7 @@ layout: false
                     "D.不反映功能"
                 ],
                 "correctAnswer":"A.外倾功能",
-                "anlysis":"《心理类型学》P406 外倾类型:因为他的类型具有一种如此强烈的外部倾向,以致于最为明显的主观事实,即他自己身体上的状况也会非常容易地接受并不恰当的思考。身体并不完全是客观的或“外在的”,结果对生理健康来说是必不可少的简单的基本需求的满足也不复存在了。于是,身体总是遭受磨难,更不消说灵魂了。"
+                "analysis":"《心理类型学》P406 外倾类型:因为他的类型具有一种如此强烈的外部倾向,以致于最为明显的主观事实,即他自己身体上的状况也会非常容易地接受并不恰当的思考。身体并不完全是客观的或“外在的”,结果对生理健康来说是必不可少的简单的基本需求的满足也不复存在了。于是,身体总是遭受磨难,更不消说灵魂了。"
             }
 
             
